# bitconch-core

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  COPYING  Dockerfile  LICENSE  Makefile  README.md  appveyor.yml  benchmarker.go  bitconch-logo.ai  build.py  circle.yml  coincaster.go  deploy-buffett.py  deploy-buffett2.py  deploy-morgan.py  deploy-nightly.py  deploy-soros.py  deploy-stable.py  deploy.py  deploy_buffett.py  fullnode.go  fullnode_config.go  genesis.go  go.mod  interfaces.go  keymaker.go  ledger_tool.go  package.go  plan.md  preset.sh  prnt.py  rsyncd-soros.conf  rsyncd.conf  run1.sh  (+4 more)
.github/: dependabot.yml  issue_template.md
FOMO3D/: fomo3d.sol
MVP/: crdt.go  sig_verification_cuda.go  sig_verification_cuda_test.go
PortGuide/: README.md  package.md
TokenIssue/: ERC20.sol  bco.sol
WhitePaper/: README.md
ZZZ/: README.md  build.py  package.go  sub_functions.go  test_playground.py
accounts/: accounts.go  manager.go
blaze_gpu/: Makefile
blazelib/: sig_verify_benchmark.go
buffett2/: Cargo.toml
buffett2/benchbot/: Cargo.toml
buffett2/benchbot/src/: main.rs
buffett2/budget/: Cargo.toml
buffett2/budget/src/: budget.rs  instruction.rs  lib.rs  payment.rs
buffett2/crypto/: Cargo.toml
buffett2/crypto/src/: chacha.rs  lib.rs
buffett_stable/interface/: Cargo.toml
buffett_stable/interface/src/: account.rs  pubkey.rs
buffett_stable/tokenbot/: Cargo.toml
buffett_stable/tokenbot/src/: main.rs
cdylib/: Makefile  README.md  build.py  build2.py  generate.go  main  main.go  package.go
common/: debug.go  types.go
consensus/: consensus.go
console/: bridge.go  console.go  console_test.go
core/: .gitignore  .gitmodules  CMakeLists.txt  bench_test.go  benchmarker.go  bitconch.doxygen.in  bitconchio.version.in  block_validator.go  block_validator_test.go  blockchain.go  blockchain_test.go  blocks.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  events.go  evm.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_test.go  headerchain.go  helper_test.go  mkalloc.go  pipeline.jsonc  state_processor.go  state_transition.go  testnet.template  tx_cacher.go  tx_journal.go  tx_list.go  tx_list_test.go  tx_pool.go  tx_pool_test.go  types.go
core/libraries/appbase/: CMakeLists.txt  version.cmake.in
core/libraries/appbase/include/appbase/: application.hpp  execution_priority_queue.hpp
core/libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  asset.cpp  authorization_manager.cpp  bccio_contract.cpp  bccio_contract_abi.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  merkle.cpp  name.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_bccio_binary_ops.cpp  wasm_bccio_injection.cpp  wasm_bccio_validation.cpp  wasm_interface.cpp  wast_to_wasm.cpp  whitelisted_intrinsics.cpp
core/libraries/chain/include/bccio/chain/: abi_def.hpp  abi_serializer.hpp  account_object.hpp  action.hpp  action_receipt.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  bccio_contract.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  chain_config.hpp  chain_id_type.hpp  chain_snapshot.hpp  code_object.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  core_symbol.hpp.in  database_utils.hpp  exceptions.hpp  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_intrinsics.hpp  genesis_state.hpp  global_property_object.hpp  incremental_merkle.hpp  merkle.hpp  multi_index_includes.hpp  name.hpp  parallel_markers.hpp  (+27 more)
core/libraries/chain/include/bccio/chain/webassembly/: common.hpp  runtime_interface.hpp  wabt.hpp  wavm.hpp
core/libraries/chain/webassembly/: wabt.cpp  wavm.cpp
crypto/: crypto.go  crypto_test.go  ed25519_test.go  signature_cgo.go  signature_test.go
cuda/: chacha.go  chacha_test.go
dashboard/: assets.go  cpu.go  dashboard.go  log.go
eth/: api.go  api_backend.go  api_test.go  api_tracer.go  backend.go  bloombits.go  config.go  gen_config.go  handler.go  handler_test.go  helper_test.go  metrics.go  peer.go  protocol.go  protocol_test.go  sync.go  sync_test.go
ethclient/: ethclient.go  ethclient_test.go  signer.go
ethdb/: database.go  database_test.go  memory_database.go
ethstats/: ethstats.go
event/: example_feed_test.go  example_scope_test.go  example_subscription_test.go  subscription.go
include/: rustelo-benchcaster-main.h  rustelo-benchmarker-main.h  rustelo-coincaster-main.h  rustelo-errors-main.h  rustelo-fullnode-config-main.h  rustelo-fullnode-main.h  rustelo-genesis-main.h  rustelo-keygen-main.h  rustelo-ledgertool-main.h  rustelo-main-execute.h  rustelo-propagator-main.h  rustelo-upload-enhancer-main.h  rustelo-wallet-main.h  rustelo.h
includes/: rustelo-main-execute.h
les/: api_backend.go  backend.go  bloombits.go  fetcher.go  handler.go  handler_test.go  helper_test.go  metrics.go  odr.go  odr_requests.go  odr_test.go  peer.go  protocol.go  request_test.go  retrieve.go  server.go  serverpool.go  sync.go  txrelay.go
light/: lightchain.go  lightchain_test.go  nodeset.go  odr.go  odr_test.go  odr_util.go  postprocess.go  trie.go  trie_test.go  txpool.go  txpool_test.go
log/: format.go
metrics/: metrics.go
miner/: agent.go  miner.go  remote_agent.go  unconfirmed.go  unconfirmed_test.go  worker.go
mobile/: accounts.go  android_test.go  big.go  bind.go  common.go  discover.go  ethclient.go  ethereum.go  geth.go  init.go  interface.go  logger.go  p2p.go  params.go  types.go  vm.go
morgan.service.template/: morgan-leader.service  morgan-tokenbot.service  morgan-validator.service
(+1031 files in other folders)
