[package]
name = "buffett-benchbot"
version = "0.1.0"
authors = ["Caesar Chad <BLUE.WEB.GEEK@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.2"
clap = "2.32"
influx_db_client = "0.3.4"
rayon = "1.0.0"
serde_json = "1.0.10"
buffett-core = "0.1.1"
buffett-crypto = "0.1.1"
buffett-metrics ="0.1.3"
buffett-timing="0.1.1"